--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "author": "saswata-basu",
   "license": "ISC",
-  "type": "module",
   "bugs": {
     "url": "https://github.com/saswatabasu23/ADG-Recruits-Task-Backend/issues"
   },
@@ -24,6 +23,13 @@
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3"
   }
 }
