--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "helmet": "^5.0.2",
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3"
+    "@types/morgan": "^1.9.3",
+    "@types/node-cron": "^3.0.2"
   }
 }
