--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
